# MPOCtrL

./: README.md  environment.yml  pyproject.toml  requirements_hpc.yml  run_on_hpc_cpu.sh  run_on_hpc_gpu.sh  run_on_local.sh  submit_jobs_to_hpc_cpu.py  submit_jobs_to_hpc_gpu.py  test_env.py
networks/: GGSL_V3_1_Module_info.csv  GGSL_V3_cmMat.csv  GGSL_V3_reactions_genes.json  GGSL_V4Gluc_1_SNN_cmMat.csv  GGSL_V4Gluc_1_module_genes.json  KEGG_Full_connected_cmMat.csv  KEGG_Full_connected_modules_genes.json  M171_V3_Module_info.csv
src/: data_interface.py  main.py  model_interface.py  utils.py
src/MPO/: mpo.py
src/MPO/utils/: data_interface.py  model_interface.py
src/tools/: counts_2_cpm.py  counts_2_cpm_sbatch.sh  filter_dense.py  filter_dense_sbatch.sh  gene_imputation.py  gene_imputation_sbatch.sh
